[project]
name = "adaptthink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "codetiming>=1.4.0",
    "datasets==3.5.0",
    "dill>=0.3.8",
    "hydra-core>=1.3.2",
    "jsonlines>=4.0.0",
    "liger-kernel>=0.6.2",
    "math-verify>=0.8.0",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pylatexenc>=2.10",
    "ray[default]>=2.48.0",
    "tensordict<=0.6.2",
    "torch>=2.6.0",
    "torchdata>=0.11.0",
    "transformers==4.51.2",
    "trl>=0.19.1",
    "verl>=0.4.1",
    "vllm==0.8.2",
    "wandb>=0.21.1",
]
